<resources>
    <string name="app_name">CogniMoodCheck</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">CogniMoodCheck</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Панель</string>
    <string name="title_notifications">Профиль</string>
    <string name="face_emotion">Определение эмоций</string>
    <string name="driver_face_emotion">Анализ лица водителя</string>
    <string name="voice_recognizer">Анализ голоса</string>
    <string name="cards">Карточки</string>
    <string name="anxieties">Беспокойства</string>
    <string name="change_mindset">Измените мышление</string>
    <string name="little_reminders">Небольшие напоминания, которые помогут вам успокоиться</string>
    <string name="mood_palette">Палитра настроения</string>
    <string name="mood_palette_definition">\t\t\t\tПалитра настроения (или цветовая палитра) - это набор цветов, которые согласуются друг с другом и могут быть использованы для передачи определенного настроения или эмоций.\n\t\t\t\tПередгивайте ползунок и выберите желаемый цвет.</string>
    <string name="mood_palette_btn">Проверить</string>
    <string name="action_settings">Settings</string>
    <string name="anxieties_is">Что такое беспокойство?</string>
    <string name="anxieties_is_definition">\t\t\t\tБеспокойство - это эмоция, возникающая вследствие мыслей о будущем по типу «а что если…», «а вдруг…», «а может быть…» и т. д.\n""\t\t\t\tБеспокойство является следствием предсказаний в мыслях опасности и угрозы, нежелательных и неконтролируемых негативных событий, ужасных и невыносимых состояний и т. п.\n""\t\t\t\tБеспокойство возникает из-за преувеличения степени вероятности и серьёзности потенциальной угрозы, а также по причине недооценки собственных способностей совладения с опасностью и признаков безопасности той или иной ситуации или какого-то физического состояния.</string>
    <string name="stages_of_anxiety_development">Стадии развития беспокойства</string>
    <string name="Stages_of_anxiety">1.	Заметка о неопределенности: в этой стадии человек осознает, что есть нечто, что вызывает беспокойство, но еще не совсем ясно, что это за ситуация или проблема.\n2.	Увеличение напряжения: беспокойство начинает усиливаться, поскольку человек осознает, что ситуация может быть серьезной или иметь негативные последствия.\n3.	Размышления и переживания: на этой стадии человек начинает активно размышлять о проблеме, пытаясь понять ее причины, последствия и возможные способы решения.\n4.	Физические проявления: беспокойство может проявляться физически, такими как бессонница, учащенное сердцебиение, потливость, напряжение в мышцах и т.д.\n5.	Поиск решений: человек начинает активно искать способы решения проблемы или смягчения беспокойства.</string>
    <string name="elements_of_anxious_thinking">Тревожные элементы</string>
    <string name="general_worry">Общая\nтревожность</string>
    <string name="individual_phobias">Отдельные\nфобии</string>
    <string name="panic_attacks">Панические\nатаки</string>
    <string name="obsessions">Навязчивости</string>
    <string name="hypochondria">Ипохондрия</string>
    <string name="social_anxiety">Социофобия</string>
    <string name="intro">Введение</string>
    <string name="signs">Симптомы</string>
    <string name="tips">Советы</string>
    <string name="general_worry_definition">\t\t\t\tЭто хроническая и непрерывная тревога, которая сопровождается постоянным беспокойством, напряжением и негативными мыслями о будущем. Люди с общей тревожностью часто переживают физические симптомы, такие как бессонница, напряжение в мышцах, усталость и раздражительность.\n\n\t\t\t\tОбъект тревоги: стрессы и проблемы.\n\n\t\t\t\tСодержание страха: частое беспокойство по разным поводам и страх будущих негативных событий.\n</string>
    <string name="general_worry_sings">\t\t\t\tСимптомы общей тревожности могут проявляться как физические, эмоциональные и психологические проявления. Вот некоторые из них:\n\n
1.	Физические симптомы:\n
\t\t•	Учащенное сердцебиение\n
\t\t•	Затрудненное дыхание\n
\t\t•	Потливость или дрожь\n
\t\t•	Напряжение в мышцах или дрожь\n
\t\t•	Головокружение или чувство слабости\n
\t\t•	Проблемы с пищеварением, тошнота, диарея или боли в животе\n
2.	Эмоциональные симптомы:\n
\t\t•	Непрерывное беспокойство или напряжение\n
\t\t•	Чувство беспокойства без явной причины\n
\t\t•	Чрезмерная реакция на стрессовые ситуации\n
\t\t•	Неопределенный страх или чувство угрозы\n
\t\t•	Раздражительность\n
3.	Психологические симптомы:\n
\t\t•	Затруднение с концентрацией\n
\t\t•	Беспокойные или навязчивые мысли\n
\t\t•	Чувство, что что-то плохое произойдет\n
\t\t•	Постоянное предчувствие опасности\n
\t\t•	Чувство, что вы не можете контролировать свои беспокойные мысли\n\n
\t\t\t\tЭти симптомы могут проявляться в разной степени у разных людей и в разные моменты времени. Если вы или кто-то из ваших близких испытывает подобные симптомы, важно обратиться за помощью к квалифицированному специалисту для диагностики и лечения тревожного расстройства.</string>
    <string name="general_worry_tips1">\t\t\t\tВот несколько советов, которые могут помочь управлять общей тревожностью:\n</string>
    <string name="general_worry_tips2">
\t\t1.	Практика глубокого дыхания и расслабления: используйте техники глубокого дыхания, медитации или прогрессивной мышечной релаксации для снижения физического напряжения и уменьшения тревожности.\n
\t\t2.	Управление стрессом: найдите здоровые способы управления стрессом, такие как занятие спортом, хобби или искусство, чтение, прогулки на свежем воздухе или общение с друзьями и семьей.\n
\t\t3.	Организация и планирование: разбейте большие задачи на более мелкие, установите приоритеты и используйте планы действий для уменьшения чувства беспокойства о будущем.\n
\t\t4.	Ограничение времени, проводимого в социальных сетях и медиа: избегайте постоянного мониторинга новостей и социальных медиа, так как это может усиливать тревожные мысли. Ограничьте свое онлайн-время, чтобы сосредоточиться на реальной жизни и позитивных взаимодействиях.\n
\t\t5.	Поддержка социальных связей: разговаривайте с друзьями, семьей или профессиональным консультантом о своих чувствах и беспокойствах. Поддержка и понимание окружающих могут помочь справиться с тревожностью.</string>
    <string name="panic_attacks_definition">\t\t\t\tЭто внезапные и интенсивные приступы тревоги, которые могут сопровождаться физическими симптомами, такими как учащенное сердцебиение, дрожь, потливость, дыхательные проблемы и чувство ужаса или гибели. Панические атаки могут быть непредсказуемыми и страшными для тех, кто переживает их.\n\n\t\t\t\tОбъект тревоги: физические ощущения.\n\n\t\t\t\tСодержание страха: страх конкретных объектов или ситуаций, объективно не представляющих собой опасности.\n</string>
    <string name="panic_attacks_sings">\t\t\t\tСимптомы панических атак могут варьироваться у разных людей и в разное время, но обычно они включают в себя физические, эмоциональные и когнитивные проявления. Вот несколько типичных симптомов панических атак:\n\n
1.	Физические симптомы:\n
\t\t•	Учащенное сердцебиение или сердцебиение\n
\t\t•	Ощущение душной или затрудненной дыхания\n
\t\t•	Повышенное потоотделение или потливость\n
\t\t•	Дрожь или дрожание тела\n
\t\t•	Ощущение головокружения, слабости\n
\t\t•	Ощущение жара или холода, мурашек по телу\n
\t\t•	Тошнота, диарея или дискомфорт в желудке\n
2.	Эмоциональные симптомы:\n
\t\t•	Интенсивный страх или чувство паники\n
\t\t•	Чувство отрыва от себя или от реальности\n
\t\t•	Страх перед потерей контроля или смертью\n
\t\t•	Чувство неопределенной угрозы\n
\t\t•	Приступы страха\n
3.	Когнитивные симптомы:\n
\t\t•	Ощущение, что вы теряете рассудок или сходите с ума\n
\t\t•	Беспокойные или навязчивые мысли\n
\t\t•	Ощущение нереальности окружающей среды\n
\t\t•	Ощущение нереальности самого себя\n
\t\t•	Затруднение с концентрацией или мышление в кругах\n\n
\t\t\t\tПанические атаки могут быть очень пугающими и интенсивными, но они обычно длительны всего несколько минут. Однако симптомы могут оставаться в течение более продолжительного времени, особенно если вы испытываете несколько атак подряд или длительную тревожность после атаки. Если вы испытываете панические атаки или другие симптомы тревожности, важно обратиться за помощью к квалифицированному специалисту для диагностики и лечения.
</string>
    <string name="panic_attacks_tips1">\t\t\t\tВот несколько советов, которые могут помочь при панических атаках:\n</string>
    <string name="panic_attacks_tips2">\t\t1.	Глубокое дыхание: попробуйте упражнения глубокого дыхания для снятия физических симптомов паники. Дыхание через нос насчитывая до четырех, задержка дыхания на несколько секунд, а затем медленное выход через рот может помочь снизить частоту сердечных сокращений и успокоить нервную систему.\n
\t\t2.	Используйте методы расслабления: практикуйте методы расслабления, такие как прогрессивная мышечная релаксация или медитация, чтобы уменьшить напряжение в теле и снять панические симптомы.\n
\t\t3.	Применение техник визуализации: визуализируйте спокойное место или обстановку, которая приносит вам удовольствие и комфорт. Представьте себя в этом месте и почувствуйте все чувства и звуки, чтобы отвлечься от панических мыслей.\n
\t\t4.	Попробуйте медикаменты: если у вас частые или интенсивные панические атаки, обратитесь к врачу за консультацией о возможности принятия лекарств, таких как антидепрессанты или препараты для снятия тревоги.\n
\t\t5.	Измените образ мышления: постарайтесь изменить свой образ мышления о панических атаках. Помните, что атаки являются временными и не представляют реальной угрозы вашему здоровью. Признайте свои страхи, но не дайте им контролировать вашу жизнь.\n
\t\t6.	Обратитесь за поддержкой: поделитесь своими чувствами и опасениями с близкими друзьями или семьей. Иметь кого-то, кто может вас поддержать и выслушать, может быть очень полезно во время панической атаки.\n
\t\t7.	Посетите специалиста: если панические атаки становятся частыми или значительно мешают вашей жизни, обратитесь за помощью к психотерапевту или психиатру. Когнитивно-поведенческая терапия и другие методы лечения могут помочь вам научиться управлять атаками и справляться с тревожностью.
</string>
    <string name="note">\t\t\t\tПримечание: Эти рекомендации по эмоциональному состоянию предоставляются исключительно в информационных целях и не должны рассматриваться как замена медицинской консультации или профессионального медицинского совета. Важно понимать, что каждый человек индивидуален, и у каждого могут быть уникальные физические и психологические характеристики, включая возможные аллергии, болезни или медицинские условия. Перед принятием каких-либо решений о своем здоровье или принятии рекомендаций по эмоциональному состоянию следует обязательно проконсультироваться с квалифицированным медицинским специалистом или врачом. Этот профессиональный совет поможет убедиться, что рекомендации и советы соответствуют индивидуальным потребностям и особенностям здоровья каждого человека.</string>
    <string name="emotion_test">Эмоциональный опросник</string>
    <string name="cogni_test">Когнитивный опросник</string>
</resources>