<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnxietiesActivity">

    <Button
        android:id="@+id/button_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/close_img"
        android:layout_marginStart="350dp"
        android:layout_marginTop="23dp"
        android:clickable="true"
        />
    <Button
        android:id="@+id/anxiety_is_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="10sp"
        android:text="@string/anxieties_is"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/stages_of_anxiety_development_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="10sp"
        android:text="@string/stages_of_anxiety_development"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/anxiety_is_btn"/>
    <Button
        android:id="@+id/elements_of_anxious_thinking_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="10sp"
        android:text="@string/elements_of_anxious_thinking"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/stages_of_anxiety_development_btn"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_1"
        android:layout_below="@+id/elements_of_anxious_thinking_btn"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/general_worry_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/general_worry"
            android:drawableTop="@drawable/general_worry_logo"
            android:layout_marginHorizontal="3dp"/>
        <Button
            android:id="@+id/individual_phobias_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/individual_phobias"
            android:drawableTop="@drawable/individual_phobias_logo"
            android:layout_marginHorizontal="3dp"/>
        <Button
            android:id="@+id/panic_attacks_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/panic_attacks"
            android:drawableTop="@drawable/panic_attacks_logo"
            android:layout_marginHorizontal="3dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_2"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/obsessions_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/obsessions"
            android:drawableTop="@drawable/obsessions_logo"
            android:layout_marginHorizontal="3dp"/>
        <Button
            android:id="@+id/hypochondria_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/hypochondria"
            android:layout_marginHorizontal="3dp"
            android:drawableTop="@drawable/hypochondria_logo"/>
        <Button
            android:id="@+id/social_anxiety_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/social_anxiety"
            android:layout_marginHorizontal="3dp"
            android:drawableTop="@drawable/social_anxiety_logo"/>
    </LinearLayout>
</RelativeLayout>