<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanicAttacksActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:id="@+id/linear_layout"
                android:gravity="center">
                <Button
                    android:id="@+id/intro_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:text="@string/intro"
                    android:background="@drawable/rounded_button"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:id="@+id/signs_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:text="@string/signs"
                    android:background="@drawable/rounded_button"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:id="@+id/tips_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:text="@string/tips"
                    android:background="@drawable/rounded_button"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:id="@+id/button_close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/close_img"
                    android:clickable="true"
                    android:layout_marginHorizontal="10dp"
                    />
            </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/panic_attacks_definition"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:id="@+id/definition"
        />
    <ImageView
        android:layout_width="260dp"
        android:layout_height="220dp"
        android:id="@+id/panic_attacks_img"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="20dp"
        android:layout_below="@id/definition"
        android:src="@drawable/panic_attacks_img"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/panic_attacks_sings"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:id="@+id/panic_attacks_sings"
        android:visibility="gone"
        android:breakStrategy="balanced"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/panic_attacks_tips1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:id="@+id/panic_attacks_tips1"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panic_attacks_tips2"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:id="@+id/panic_attacks_tips2"
        android:layout_below="@+id/panic_attacks_tips1"
        android:visibility="gone"
        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:layout_marginTop="20dp"
                android:textColor="@color/textColor"
                android:layout_below="@+id/panic_attacks_tips2"
                android:textSize="14sp"
                android:justificationMode="inter_word"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/textView_note"
                android:visibility="gone"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/textView_note"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>