<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <Button
        android:id="@+id/face_recognition_btn"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="10sp"
        android:text="@string/face_emotion"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/face_recognition_logo"
        />
    <Button
        android:id="@+id/driver_face_recognition_btn"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:text="@string/driver_face_emotion"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/driver_face_recognition_logo"
        android:layout_below="@+id/face_recognition_btn"
        />
    <Button
        android:id="@+id/speech_recognition_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/voice_recognizer"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/face_recognition_btn"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout"
        android:layout_below="@+id/driver_face_recognition_btn"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/test_btn"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/emotion_test"
            android:layout_below="@+id/anxiety_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="2dp"
            android:drawableTop="@drawable/emotion_test_logo" />
        <Button
            android:id="@+id/cogni_btn"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/cogni_test"
            android:layout_below="@+id/test_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="2dp"
            android:drawableTop="@drawable/cogni_test_logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout1"
        android:layout_below="@+id/linear_layout"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/cards_btn"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/cards"
            android:layout_below="@+id/linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="2dp"
            android:drawableTop="@drawable/cards_logo"
            />

        <Button
            android:id="@+id/anxiety_btn"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:text="@string/anxieties"
            android:layout_below="@+id/cards_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="2dp"
            android:drawableTop="@drawable/anxieties_logo" />
    </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/linear_layout1"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>