<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:cardBackgroundColor="@color/dark_green"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        >

        <com.denzcoskun.imageslider.ImageSlider
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageSlider"
            app:iss_period="3000"
            app:iss_auto_cycle="true"
            app:iss_delay="1000"
            app:iss_corner_radius="20"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_palette"
        android:textAlignment="center"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:background="@drawable/rounded_text"
        android:padding="9dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/mood_palette_definition"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="330dp"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        />
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="535dp"
        android:progress="0"
        android:thumbTint="@color/green"
        android:thumbTintMode="src_in"
        android:max="70"
        />
    <Button
        android:id="@+id/mood_palette_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="565dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="@string/mood_palette_btn"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/mood_palette_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="573dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        />
</RelativeLayout>